# cpp-sfml-boilerplate

./: CMakeLists.txt  LICENSE.md  README.md  build.sh
src/: main.cpp
